include news section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,7 @@ main:
     slug: "about"
     sections:
         - about
+        - news
         - services
         # - pricing
         # - facts
