--- a/_data/content.yml
+++ b/_data/content.yml
@@ -18,6 +18,16 @@ about:
           <br>My PhD advisor is <a href=\"https://azaidman.github.io/\">Andy Zaidman</a> and I'm part of the <a href=\"https://testshiftproject.github.io/\">TestShift</a> project.
         </p>
         "
+
+news:
+  columns:
+    - type: "list" #skills progress type - default, dotted, circles, list
+      title: "News"
+      icon: "speakerphone"
+      items:
+        - label: "I will present our paper <a href=\"/publications/TIG_paper_VISSOFT_2022.pdf\">\"How Does This New Developer Test Fit In? A Visualization to Understand Amplified Test Cases\"</a> at <a href=\"https://vissoft.info/2022/program.html\">VISSOFT'22</a>."
+        - label: "I will be at <a href=\"https://benevol2022.github.io/\">BENEVOL'22</a> in Mons, Belgium. Let's meet!"
+
   # list:
   #   - label: "Age"
   #     value: "24"
@@ -173,6 +183,11 @@ academic-service:
     title: "Academic"
     icon: "university"
     items:
+      - year: "2022"
+        institution: "Journal of Software: Evolution and Process"
+        text: "Reviewer"
+        h_line: 1
+
       - year: "2021"
         institution: "Journal of Software: Evolution and Process"
         text: "Reviewer"
